package Structural.Flyweight.Interface;

public interface Robot {
    void display(int x,int y);
}
